manifests/obsolete/istio-config.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-2
spec:
  selector:
    istio: ingressgateway # Use the Istio ingress gateway
  servers:
    - port:
        name: tcp-8080
        number: 8080
        protocol: TCP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-2
spec:
  hosts:
    - app-2
  gateways:
    - app-2
  tcp:
    - match:
        - port: 8080
      route:
        - destination:
            host: app-2
            port:
              number: 8080
---
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: app-2
spec:
  host: app-2
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
      # consistentHash:
      #   httpCookie:
      #     name: grpc-session
      #     ttl: 0s
